--- a/index.html
+++ b/index.html
@@ -1,16 +1,62 @@
 <DOCTYPE html>
 <html lang="de">
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <title id="title">Tribute Page to Eminem</title>
+        <link href="default.css" rel="stylesheet">
     </head>
     <body>
-        <div id="main">
-        <h1>Tribute Page to Eminem</h1>
-        <h2>Genius of Rap</h2>
+    <div id="main">
+        <div>
+            <h1 class="center">Tribute Page to Eminem</h1>
+            <h2 class="center">Genius of Rap</h2>
         </div>
         <div id="img-div">
-
+            <img id="image" src="https://www.eventim.de/magazin/fileadmin/_processed_/9/f/csm_eminem-tour-tickets-2018-1_70cb4ff939.jpg">
+                <div id="img-caption">
+                    <p>Auf dem Foto ist Eminem aus dem Jahr 2018 zu sehen - kurz nach dem Release seines neuen Albums.</p>
+                </div>
         </div>
+        <div id="tribute-info">
+            <a id="tribute-link" target="_blank" href="https://de.wikipedia.org/wiki/Eminem">Link zu dem Wikipedia Eintrag von Eminem</a>
+            <ul>
+                <h3>Hier ist ein Auszug aus der Biografie</h3>
+                <li>
+                    <strong>1992–1998</strong>
+                    - Erste Erfahrungen
+                </li>
+                <li>
+                    <strong>1999–2005</strong>
+                    - Kommerzieller Erfolg
+                </li>
+                <li>
+                    <strong>2006–2008</strong>
+                    - Musikalische Auszeit
+                </li>
+                <li>
+                    <strong>2009 bis heute</strong>
+                    - Fortsetzung
+                </li>
+                <h3>Filmografie</h3>
+                <li>
+                    <strong>2001</strong>
+                    - The Wash
+                </li>
+                <li>
+                    <strong>2002</strong>
+                    - 8 Mile
+                </li>
+                <li>
+                    <strong>2009</strong>
+                    - Wie das Leben so spielt
+                </li>
+                <li>
+                    <strong>2014</strong>
+                    - The Interview
+                </li>
+            </ul>
+        </div>
+    </div>
     </body>
 </html>
